--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         // Инициализация иконок Lucide
         lucide.createIcons();
 
-        // ОБНОВЛЕННЫЙ URL
+        // ОБНОВЛЕННЫЙ URL СКРИПТА
         const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxGh4NKvH7n8qOCi9g-avH9qn0CshxZHm3Dv_irnV6oBySJOzryzCRLLukgs8-uyPSdpg/exec";
         
         const formatCurrency = (val) => new Intl.NumberFormat('ru-RU').format(val);
